@@ -48,9 +48,10 @@ enum
   PROP_INTERPOLATION,
   PROP_CLIP,
   PROP_PREVIEW_TYPE,
+  PROP_PREVIEW_OPACITY,
   PROP_GRID_TYPE,
   PROP_GRID_SIZE,
-  PROP_CONSTRAIN
+  PROP_CONSTRAIN,
 };
 
 
@@ -67,7 +68,11 @@ static void   gimp_transform_options_reset          (GimpToolOptions *tool_optio
 
 static void   gimp_transform_options_preview_notify (GimpTransformOptions *options,
                                                      GParamSpec           *pspec,
-                                                     GtkWidget            *density_box);
+                                                     GtkWidget            *box);
+
+static void   gimp_transform_options_preview_opacity_notify (GimpTransformOptions *options,
+                                                     GParamSpec           *pspec,
+                                                     GtkWidget            *table);
 
 
 G_DEFINE_TYPE (GimpTransformOptions, gimp_transform_options,
@@ -112,6 +117,10 @@ gimp_transform_options_class_init (GimpTransformOptionsClass *klass)
                                  GIMP_TYPE_TRANSFORM_PREVIEW_TYPE,
                                  GIMP_TRANSFORM_PREVIEW_TYPE_IMAGE,
                                  GIMP_PARAM_STATIC_STRINGS);
+  GIMP_CONFIG_INSTALL_PROP_DOUBLE (object_class, PROP_PREVIEW_OPACITY,
+                                   "preview-opacity", NULL,
+                                   0.0, 1.0, 1.0,
+                                GIMP_PARAM_STATIC_STRINGS);
   GIMP_CONFIG_INSTALL_PROP_ENUM (object_class, PROP_GRID_TYPE,
                                  "grid-type", NULL,
                                  GIMP_TYPE_TRANSFORM_GRID_TYPE,
@@ -158,6 +167,9 @@ gimp_transform_options_set_property (GObject      *object,
     case PROP_PREVIEW_TYPE:
       options->preview_type = g_value_get_enum (value);
       break;
+    case PROP_PREVIEW_OPACITY:
+      options->preview_opacity = g_value_get_double (value);
+      break;
     case PROP_GRID_TYPE:
       options->grid_type = g_value_get_enum (value);
       break;
@@ -198,6 +210,9 @@ gimp_transform_options_get_property (GObject    *object,
     case PROP_PREVIEW_TYPE:
       g_value_set_enum (value, options->preview_type);
       break;
+    case PROP_PREVIEW_OPACITY:
+      g_value_set_double (value, options->preview_opacity);
+      break;
     case PROP_GRID_TYPE:
       g_value_set_enum (value, options->grid_type);
       break;
@@ -228,6 +243,14 @@ gimp_transform_options_reset (GimpToolOptions *tool_options)
   GIMP_TOOL_OPTIONS_CLASS (parent_class)->reset (tool_options);
 }
 
+/**
+ * gimp_transform_options_gui:
+ * @tool_options: a #GimpToolOptions
+ *
+ * Build the Transform Tool Options.
+ *
+ * Return value: a container holding the transform tool options
+ **/
 GtkWidget *
 gimp_transform_options_gui (GimpToolOptions *tool_options)
 {
@@ -239,7 +262,7 @@ gimp_transform_options_gui (GimpToolOptions *tool_options)
   GtkWidget            *frame;
   GtkWidget            *table;
   GtkWidget            *combo;
-  GtkWidget            *button;
+  GtkWidget            *preview_box;
   const gchar          *constrain = NULL;
 
   hbox = gimp_prop_enum_stock_box_new (config, "type", "gimp", 0, 0);
@@ -296,22 +319,42 @@ gimp_transform_options_gui (GimpToolOptions *tool_options)
   gtk_box_pack_start (GTK_BOX (hbox), combo, TRUE, TRUE, 0);
   gtk_widget_show (combo);
 
-  /*  the grid type menu  */
-  button = gtk_vbox_new (FALSE, 6);
-  gtk_container_add (GTK_CONTAINER (frame), button);
-  gtk_widget_show (button);
+  preview_box = gtk_vbox_new (FALSE, 6);
+  gtk_container_add (GTK_CONTAINER (frame), preview_box);
+  gtk_widget_show (preview_box);
 
+  /*  the preview opacity scale  */
+  table = gtk_table_new (1, 3, FALSE);
+  gtk_table_set_col_spacing (GTK_TABLE (table), 1, 2);
+  gtk_box_pack_start (GTK_BOX (preview_box), table, FALSE, FALSE, 0);
+  gtk_widget_show (table);
+
+  gtk_widget_set_sensitive (table,
+                            options->preview_type ==
+                            GIMP_TRANSFORM_PREVIEW_TYPE_IMAGE ||
+                            options->preview_type ==
+                            GIMP_TRANSFORM_PREVIEW_TYPE_IMAGE_GRID);
+
+  g_signal_connect (config, "notify::preview-type",
+                    G_CALLBACK (gimp_transform_options_preview_opacity_notify),
+                    table);
+
+  gimp_prop_opacity_entry_new (config, "preview-opacity",
+                               GTK_TABLE (table), 0, 0,
+                               _("Opacity:"));
+
+  /*  the grid type menu  */
   combo = gimp_prop_enum_combo_box_new (config, "grid-type", 0, 0);
-  gtk_box_pack_start (GTK_BOX (button), combo, FALSE, FALSE, 0);
+  gtk_box_pack_start (GTK_BOX (preview_box), combo, FALSE, FALSE, 0);
   gtk_widget_show (combo);
 
   /*  the grid density scale  */
   table = gtk_table_new (1, 3, FALSE);
   gtk_table_set_col_spacing (GTK_TABLE (table), 1, 2);
-  gtk_box_pack_start (GTK_BOX (button), table, FALSE, FALSE, 0);
+  gtk_box_pack_start (GTK_BOX (preview_box), table, FALSE, FALSE, 0);
   gtk_widget_show (table);
 
-  gtk_widget_set_sensitive (button,
+  gtk_widget_set_sensitive (combo,
                             options->preview_type ==
                             GIMP_TRANSFORM_PREVIEW_TYPE_GRID ||
                             options->preview_type ==
@@ -319,7 +362,17 @@ gimp_transform_options_gui (GimpToolOptions *tool_options)
 
   g_signal_connect (config, "notify::preview-type",
                     G_CALLBACK (gimp_transform_options_preview_notify),
-                    button);
+                    combo);
+
+  gtk_widget_set_sensitive (table,
+                            options->preview_type ==
+                            GIMP_TRANSFORM_PREVIEW_TYPE_GRID ||
+                            options->preview_type ==
+                            GIMP_TRANSFORM_PREVIEW_TYPE_IMAGE_GRID);
+
+  g_signal_connect (config, "notify::preview-type",
+                    G_CALLBACK (gimp_transform_options_preview_notify),
+                    table);
 
   gimp_prop_scale_entry_new (config, "grid-size",
                              GTK_TABLE (table), 0, 0,
@@ -338,8 +391,11 @@ gimp_transform_options_gui (GimpToolOptions *tool_options)
 
   if (constrain)
     {
-      gchar *label = g_strdup_printf (constrain,
-                                      gimp_get_mod_string (GDK_CONTROL_MASK));
+      GtkWidget *button;
+      gchar     *label;
+
+      label = g_strdup_printf (constrain,
+                               gimp_get_mod_string (GDK_CONTROL_MASK));
 
       button = gimp_prop_check_button_new (config, "constrain", label);
       gtk_box_pack_start (GTK_BOX (vbox), button, FALSE, FALSE, 0);
@@ -357,11 +413,24 @@ gimp_transform_options_gui (GimpToolOptions *tool_options)
 static void
 gimp_transform_options_preview_notify (GimpTransformOptions *options,
                                        GParamSpec           *pspec,
-                                       GtkWidget            *density_box)
+                                       GtkWidget            *box)
 {
-  gtk_widget_set_sensitive (density_box,
+  gtk_widget_set_sensitive (box,
                             options->preview_type ==
                             GIMP_TRANSFORM_PREVIEW_TYPE_GRID ||
                             options->preview_type ==
                             GIMP_TRANSFORM_PREVIEW_TYPE_IMAGE_GRID);
 }
+
+static void
+gimp_transform_options_preview_opacity_notify (GimpTransformOptions *options,
+                                               GParamSpec           *pspec,
+                                               GtkWidget            *table)
+{
+  gtk_widget_set_sensitive (table,
+                            options->preview_type ==
+                            GIMP_TRANSFORM_PREVIEW_TYPE_IMAGE ||
+                            options->preview_type ==
+                            GIMP_TRANSFORM_PREVIEW_TYPE_IMAGE_GRID);
+}
+
